[gd_scene load_steps=5 format=2]

[ext_resource path="res://utils/PressStart2P.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/breakloop.gd" type="Script" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="Animation" id=2]
resource_name = "animate"
tracks/0/type = "value"
tracks/0/path = NodePath("Message/Label2:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Message/Label2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="breakloop" type="ColorRect"]
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -52.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 52.0
margin_top = 32.0
margin_right = 268.0
margin_bottom = 95.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 216.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 1 )
text = "You feel an urge to ESCAPE.
Break the loop?"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 216.0
margin_bottom = 63.0

[node name="Gap" type="Control" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 216.0

[node name="Yes" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_top = 4.0
margin_right = 216.0
margin_bottom = 19.0
rect_min_size = Vector2( 60, 0 )
focus_neighbour_top = NodePath("../No")
focus_neighbour_bottom = NodePath("../No")
custom_styles/focus = SubResource( 1 )
custom_fonts/font = ExtResource( 1 )
text = "yes"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="No" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_top = 23.0
margin_right = 216.0
margin_bottom = 38.0
rect_min_size = Vector2( 60, 0 )
focus_neighbour_top = NodePath("../Yes")
focus_neighbour_bottom = NodePath("../Yes")
custom_styles/focus = SubResource( 1 )
custom_fonts/font = ExtResource( 1 )
text = "no"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 80.0
margin_bottom = -36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Message"]
margin_left = 84.0
margin_top = 27.0
margin_right = 236.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 1 )
text = "Insufficient funds."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/animate = SubResource( 2 )
[connection signal="focus_entered" from="CenterContainer/VBoxContainer/HBoxContainer/Yes" to="." method="_on_Yes_focus_entered"]
[connection signal="focus_exited" from="CenterContainer/VBoxContainer/HBoxContainer/Yes" to="." method="_on_Yes_focus_exited"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/Yes" to="." method="_on_Yes_pressed"]
[connection signal="focus_entered" from="CenterContainer/VBoxContainer/HBoxContainer/No" to="." method="_on_No_focus_entered"]
[connection signal="focus_exited" from="CenterContainer/VBoxContainer/HBoxContainer/No" to="." method="_on_No_focus_exited"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/No" to="." method="_on_No_pressed"]
